--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,14 @@
   cursor: pointer;
 }
 
+.popup__button_disabled {
+  color: rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+  background-color: rgba(255, 255, 255, 1);
+  border: 1px solid #000;
+
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
