--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,21 @@
   margin-bottom: 0;
 }
 
+.popup__error {
+  color: #F00;
+  font-size: 12px;
+  font-weight: 400;
+  visibility: hidden;
+}
+
+.popup__input_type_error {
+  border-bottom-color: red;
+}
+
+.popup__error_visible {
+  visibility: visible;
+}
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
