--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,5 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -20,3 +21,24 @@
     margin-right: 0;
   }
 }
+
+.profile__image:hover::before {
+  content: '';
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url('../../../images/edit-icon.svg');
+  background-size: 26px;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;  
+}
+
+.profile__image:hover::before {
+  opacity: 1;
+}
+
